# hacker_ai

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  PHASE_3_4_SUMMARY.md  README.md  SECURITY.md  ai_memory.json  config.py  docker-compose.yml  main.py  main_features.md  professional_readme.md  pyproject.toml  requirements.txt  requirments.txt  setup.py  structure.md  terms_of_use.md  user_profiles.json
Archives/: README.md
ai/: README.md
cli/: README.md
cosmicsec_platform/: __init__.py
docs/: ARCHITECTURE_DIAGRAM.md  BUG_BOUNTY_GUIDE.md  DEVSECOPS_GUIDE.md  HYBRID_PLATFORM_ROADMAP.md  IMPLEMENTATION_GUIDE.md  MODERNIZATION_ROADMAP.md  NEXT_GEN_ROADMAP.md  PHASE_PROGRESS.md  PLATFORM_TRANSFORMATION_SUMMARY.md  QUICK_START.md  README.md  ROADMAP_IMPLEMENTATION_AUDIT.md  SOC_ANALYST_GUIDE.md  index.md  structure.md
frontend/: jest.config.cjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo
hacker_ai/: .env  config.py  launcher.py
llm/: offline_chat.py
phishing/: email_spoofer.py  html_generator.py  phishing_payloads.py
plugins/: registry.py
recon/: dns_enumerator.py  dorker.py  info_gathering.py  ip_locator.py  osint_module.py  osint_tools.py  subdomain_finder.py
reverse_engineering/: decompiler_interface.py  string_extractor.py
scanners/: ai_scanner_bridge.py  live_exploit_generator.py
scripts/: storage-cleanup.sh
shared/: README.md
tests/: test_ai_service.py  test_api_gateway.py  test_auth_service.py  test_collab_service.py  test_defensive_ai.py  test_new_services.py  test_recon_service.py  (+2 more)
(+201 files in other folders)
